main / added videos and small fixes for adaptive mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <main class="main">
       <section class="hero">
         <div class="hero__inner">
-          <div class="hero__bg"></div>
+          <!-- <div class="hero__bg"></div> -->
+          <div class="hero__video-wrapper">
+            <video
+              class="hero__video"
+              src="./assets/video/banner-video.mp4"
+              poster="./assets/images/hero.jpg"
+              autoplay
+              muted
+              playsinline
+              loop
+            />
+          </div>
           <div class="hero__body">
             <header class="container header">
               <div class="header__inner">
@@ -124,9 +135,7 @@
 
                 <div class="card__header">
                   <div class="card__advantages">
-                    <div class="card__advantage" data-i18n="white-label">
-                      White Label
-                    </div>
+                    <div class="card__advantage">White Label</div>
                     <div class="card__advantage" data-i18n="selling the code">
                       ПРОДАЖА КОДА
                     </div>
@@ -201,9 +210,7 @@
 
                 <div class="card__header">
                   <div class="card__advantages">
-                    <div class="card__advantage" data-i18n="white-label">
-                      White Label
-                    </div>
+                    <div class="card__advantage">White Label</div>
                     <div class="card__advantage" data-i18n="selling the code">
                       ПРОДАЖА КОДА
                     </div>
@@ -321,9 +328,7 @@
 
                 <div class="card__header">
                   <div class="card__advantages">
-                    <div class="card__advantage" data-i18n="white-label">
-                      White Label
-                    </div>
+                    <div class="card__advantage">White Label</div>
                     <p
                       class="card__header-description"
                       data-i18n="cryptocurrency Exchange with Intuitive UX"
@@ -396,7 +401,7 @@
                 class="dm-gsap-cards card card-4 orange-card dm-gsap-cards-end"
                 id="card-4"
               >
-                <picture class="card__bg">
+                <!-- <picture class="card__bg">
                   <source
                     class="card__bg"
                     srcset="./assets/images/card-4-bg.webp"
@@ -412,7 +417,19 @@
                     src="./assets/images/card-4-bg.png"
                     alt="Card-4"
                   />
-                </picture>
+                </picture> -->
+
+                <div class="card__video-wrapper">
+                  <video
+                    class="card__video"
+                    src="./assets/video/card.mp4"
+                    poster="./assets/images/card-4-bg.png"
+                    autoplay
+                    muted
+                    playsinline
+                    loop
+                  ></video>
+                </div>
 
                 <div class="card__header">
                   <div class="card__advantages">
