--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
               <div class="header__inner">
                 <a class="logo" href="/">
                   <object
+                  class="logo__image"
                     data="./assets/icons/logo.svg"
                     type="image/svg+xml"
                   ></object>
-                  ULTIMA<sup>®</sup>
+                  <span>ULTIMA</span><sup>®</sup>
                 </a>
 
                 <button class="language-button">RU</button>
@@ -503,7 +504,6 @@
                   placeholder="Имя"
                   name="name"
                 />
-                <p class="form-error"></p>
               </div>
               <div class="form-control">
                 <input
@@ -512,7 +512,6 @@
                   type="tel"
                   name="tel"
                 />
-                <p class="form-error"></p>
               </div>
               <div class="form-control">
                 <input
@@ -520,7 +519,6 @@
                   placeholder="Почта или телеграм"
                   name="email"
                 />
-                <p class="form-error"></p>
               </div>
             </div>
             <button
@@ -537,11 +535,14 @@
     </footer>
 
     <script src="./js/app.js"></script>
+    <script src="./js/callback-form.js"></script>
     <script src="./js/cards.js"></script>
     <script src="./js/languages.js"></script>
+    <script src="./js/maskPhone.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
     <script src="./js/animations.js"></script>
+    <script src="./js/loader.js"></script>
   </body>
 </html>
