fixes / changed cards backgrounds for mobile

--- a/index.html
+++ b/index.html
@@ -159,19 +159,51 @@
               <div class="dm-gsap-cards card card-1" id="card-1">
                 <picture class="card__bg">
                   <source
+                    srcset="./assets/images/card-1-bg-mobile.webp"
+                    media="(max-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-1-bg-mobile.png"
+                    media="(max-width: 768px)"
+                    type="image/png"
+                  />
+
+                  <source
                     srcset="./assets/images/card-1-bg.webp"
+                    media="(min-width: 769px)"
                     type="image/webp"
                   />
                   <source
                     srcset="./assets/images/card-1-bg.png"
+                           media="(min-width: 769px)"
                     type="image/png"
                   />
                   <img src="./assets/images/card-1-bg.png" alt="Card-1" />
                 </picture>
 
                 <picture class="card__image">
-                  <source srcset="./assets/images/card-1.webp" />
-                  <source srcset="./assets/images/card-1.png" />
+                  <source
+                    srcset="./assets/images/card-1-mobile.webp"
+                    media="(max-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-1-mobile.png"
+                    media="(max-width: 768px)"
+                    type="image/png"
+                  />
+
+                  <source
+                    srcset="./assets/images/card-1.webp"
+                    media="(min-width: 769px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-1.png"
+                    media="(min-width: 769px)"
+                    type="image/png"
+                  />
                   <img src="./assets/images/card-1.png" alt="Card-1.1" />
                 </picture>
 
@@ -228,15 +260,43 @@
                 </div>
               </div>
               <div class="dm-gsap-cards card card-2 orange-card" id="card-2">
-                <object
-                  class="card__bg"
-                  data="./assets/images/card-2-bg.svg"
-                  type="image/svg+xml"
-                ></object>
+                <picture class="card__bg">
+                  <source
+                    srcset="./assets/images/card-2-bg-mobile.png"
+                    media="(max-width: 768px)"
+                    type="image/png"
+                  />
+
+                  <source
+                    srcset="./assets/images/card-2-bg.svg"
+                    media="(min-width: 769px)"
+                    type="image/svg+xml"
+                  />
+                  <img src="./assets/images/card-2-bg.svg" alt="Card-2" />
+                </picture>
 
                 <picture class="card__image">
-                  <source srcset="./assets/images/card-2.webp" />
-                  <source srcset="./assets/images/card-2.png" />
+                  <source
+                    srcset="./assets/images/card-2-mobile.webp"
+                    media="(max-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-2-mobile.png"
+                    media="(max-width: 768px)"
+                    type="image/png"
+                  />
+
+                  <source
+                    srcset="./assets/images/card-2.webp"
+                    media="(min-width: 769px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-2.png"
+                    media="(min-width: 769px)"
+                    type="image/png"
+                  />
                   <img src="./assets/images/card-2.png" alt="Card-2" />
                 </picture>
 
@@ -326,11 +386,24 @@
               <div class="dm-gsap-cards card card-3" id="card-3">
                 <picture class="card__bg">
                   <source
+                    srcset="./assets/images/card-3-bg-mobile.webp"
+                    media="(max-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-3-bg-mobile.png"
+                    media="(max-width: 768px)"
+                    type="image/png"
+                  />
+
+                  <source
                     srcset="./assets/images/card-3-bg.webp"
+                    media="(min-width: 769px)"
                     type="image/webp"
                   />
                   <source
                     srcset="./assets/images/card-3-bg.png"
+                    media="(min-width: 769px)"
                     type="image/png"
                   />
                   <img src="./assets/images/card-3-bg.png" alt="Card-3" />
@@ -338,12 +411,27 @@
 
                 <picture class="card__image">
                   <source
+                    srcset="./assets/images/card-3-mobile.webp"
+                    media="(max-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./assets/images/card-3-mobile.png"
+                    media="(max-width: 768px)"
+                    type="image/png"
+                  />
+
+                  <source
                     class="card__image"
                     srcset="./assets/images/card-3.webp"
+                    media="(min-width: 769px)"
+                    type="image/webp"
                   />
                   <source
                     class="card__image"
                     srcset="./assets/images/card-3.png"
+                    media="(min-width: 769px)"
+                    type="image/png"
                   />
                   <img
                     class="card__image"
