fixes / fixed desktop version

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
               <button
                 class="hero__button button primary"
                 onclick="scrollToBlock(event, 'footer')"
-                data-i18n="contact-us"
               >
-                Связаться с нами
+                <span data-i18n="contact-us">Связаться с нами</span>
               </button>
             </div>
           </div>
@@ -253,9 +252,8 @@
                   <button
                     class="card__footer-button button primary"
                     onclick="scrollToBlock(event, 'footer')"
-                    data-i18n="contact-us"
                   >
-                    Связаться с нами
+                    <span data-i18n="contact-us">Связаться с нами</span>
                   </button>
                 </div>
               </div>
@@ -377,9 +375,8 @@
                   <button
                     class="card__footer-button button primary"
                     onclick="scrollToBlock(event, 'footer')"
-                    data-i18n="contact-us"
                   >
-                    Связаться с нами
+                    <span data-i18n="contact-us">Связаться с нами</span>
                   </button>
                 </div>
               </div>
@@ -442,7 +439,9 @@
 
                 <div class="card__header">
                   <div class="card__advantages">
-                    <div class="card__advantage">White Label</div>
+                    <div class="card__advantage" data-i18n="selling the code">
+                      Продажа кода
+                    </div>
                     <p
                       class="card__header-description"
                       data-i18n="cryptocurrency Exchange with Intuitive UX"
@@ -505,9 +504,8 @@
                   <button
                     class="card__footer-button button primary"
                     onclick="scrollToBlock(event, 'footer')"
-                    data-i18n="contact-us"
                   >
-                    Связаться с нами
+                    <span data-i18n="contact-us">Связаться с нами</span>
                   </button>
                 </div>
               </div>
@@ -547,15 +545,14 @@
                     class="card__footer-description--small"
                     data-i18n="focus on business, and we'll take care of all the technical stuff"
                   >
-                    Сфокусируйтесь на бизнесе, а мы возьмем на себя всё
+                    Сфокусируйтесь на бизнесе,<br /> а мы возьмем на себя всё
                     техническое
                   </p>
                   <button
                     class="card__footer-button button primary"
                     onclick="scrollToBlock(event, 'footer')"
-                    data-i18n="contact-us"
                   >
-                    Связаться с нами
+                    <span data-i18n="contact-us"> Связаться с нами </span>
                   </button>
                 </div>
               </div>
